syntax = "proto3";

option csharp_namespace = "gRPCDemo";

package testsay;

// The greeting service definition.
service TestSay {
  // Sends a greeting
  rpc SayTest (TestRequest) returns (TestReply);
}

// The request message containing the user's name.
message TestRequest {
  string name = 1;
}

// The response message containing the greetings.
message TestReply {
  string message = 1;
}
